[package]
name = "klippa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = " 0.3.26", features = [] }
